{
  "version": 4,
  "terraform_version": "1.5.1",
  "serial": 141,
  "lineage": "5352c56e-f8fc-f1f1-1e25-d2209adc017c",
  "resources": [
    {
      "module": "module.ecsCluster",
      "mode": "managed",
      "type": "aws_alb",
      "name": "application_load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:888659321129:loadbalancer/app/cc-demo-app-alb/be9f30b97433b2b5",
            "arn_suffix": "app/cc-demo-app-alb/be9f30b97433b2b5",
            "desync_mitigation_mode": "defensive",
            "dns_name": "cc-demo-app-alb-1332071170.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:888659321129:loadbalancer/app/cc-demo-app-alb/be9f30b97433b2b5",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "cc-demo-app-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0a05fe79e8ec9a4d0"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-26ce624c"
              },
              {
                "subnet_id": "subnet-2e3bd562"
              },
              {
                "subnet_id": "subnet-3bf9e246"
              }
            ],
            "subnets": [
              "subnet-26ce624c",
              "subnet-2e3bd562",
              "subnet-3bf9e246"
            ],
            "vpc_id": "vpc-c0a165aa",
            "xff_header_processing_mode": "append",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "module.ecsCluster.aws_default_subnet.default_subnet_a",
            "module.ecsCluster.aws_default_subnet.default_subnet_b",
            "module.ecsCluster.aws_default_subnet.default_subnet_c",
            "module.ecsCluster.aws_security_group.load_balancer_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.ecsCluster",
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "default_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:888659321129:subnet/subnet-26ce624c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "172.31.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "existing_default_subnet": true,
            "force_destroy": false,
            "id": "subnet-26ce624c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "888659321129",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-c0a165aa"
          }
        }
      ]
    },
    {
      "module": "module.ecsCluster",
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "default_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:888659321129:subnet/subnet-3bf9e246",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "172.31.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "existing_default_subnet": true,
            "force_destroy": false,
            "id": "subnet-3bf9e246",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "888659321129",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-c0a165aa"
          }
        }
      ]
    },
    {
      "module": "module.ecsCluster",
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "default_subnet_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:888659321129:subnet/subnet-2e3bd562",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "172.31.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "existing_default_subnet": true,
            "force_destroy": false,
            "id": "subnet-2e3bd562",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "888659321129",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-c0a165aa"
          }
        }
      ]
    },
    {
      "module": "module.ecsCluster",
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:888659321129:vpc/vpc-c0a165aa",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-0f2eb865",
            "default_route_table_id": "rtb-6fd0af05",
            "default_security_group_id": "sg-a15c66c4",
            "dhcp_options_id": "dopt-5193573b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "existing_default_vpc": true,
            "force_destroy": false,
            "id": "vpc-c0a165aa",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-6fd0af05",
            "owner_id": "888659321129"
          }
        }
      ]
    },
    {
      "module": "module.ecsCluster",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:888659321129:listener/app/cc-demo-app-alb/be9f30b97433b2b5/d09a67bbaa6e79f3",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:888659321129:targetgroup/cc-demo-alb-tg/bfe131987f383ee5",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:888659321129:listener/app/cc-demo-app-alb/be9f30b97433b2b5/d09a67bbaa6e79f3",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:888659321129:loadbalancer/app/cc-demo-app-alb/be9f30b97433b2b5",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecsCluster.aws_alb.application_load_balancer",
            "module.ecsCluster.aws_default_subnet.default_subnet_a",
            "module.ecsCluster.aws_default_subnet.default_subnet_b",
            "module.ecsCluster.aws_default_subnet.default_subnet_c",
            "module.ecsCluster.aws_default_vpc.default_vpc",
            "module.ecsCluster.aws_lb_target_group.target_group",
            "module.ecsCluster.aws_security_group.load_balancer_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.ecsCluster",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:888659321129:targetgroup/cc-demo-alb-tg/bfe131987f383ee5",
            "arn_suffix": "targetgroup/cc-demo-alb-tg/bfe131987f383ee5",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:888659321129:targetgroup/cc-demo-alb-tg/bfe131987f383ee5",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "cc-demo-alb-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-c0a165aa"
          },
          "dependencies": [
            "module.ecsCluster.aws_default_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecsCluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "load_balancer_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:888659321129:security-group/sg-0a05fe79e8ec9a4d0",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a05fe79e8ec9a4d0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20230811112326590600000001",
            "name_prefix": "terraform-",
            "owner_id": "888659321129",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-c0a165aa"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.ecsCluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "service_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:888659321129:security-group/sg-0edeb75e5778fa4b0",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0edeb75e5778fa4b0",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0a05fe79e8ec9a4d0"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20230811112328968100000003",
            "name_prefix": "terraform-",
            "owner_id": "888659321129",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-c0a165aa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecsCluster.aws_security_group.load_balancer_security_group"
          ]
        }
      ]
    }
  ]
}